monkey face on left click only, removed ability to highlight tiles fixing stuck monkey face bug

--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -9,33 +9,49 @@
     justify-content: center;
     align-items: center;
     font-weight: bold;
+    -webkit-touch-callout: none;/* iOS Safari */
+    -webkit-user-select: none;/* Safari */
+    -khtml-user-select: none;/* Konqueror HTML */
+    -moz-user-select: none;/* Old versions of Firefox */
+    -ms-user-select: none;/* Internet Explorer/Edge */
+    user-select: none; /* Non-prefixed version, currently
+                        supported by Chrome, Edge, Opera and Firefox */
+   
 
     &.visible {
         border-color: #7b7b7b;
         border-width: 1px;
+
         &.value-1 {
             color: blue;
         }
+
         &.value-2 {
             color: green;
         }
+
         &.value-3 {
             color: red;
         }
+
         &.value-4 {
-            color:purple;
+            color: purple;
         }
+
         &.value-5 {
             color: maroon;
         }
+
         &.value-6 {
-            color:turquoise;
+            color: turquoise;
         }
+
         &.value-7 {
-            color:black;
+            color: black;
         }
+
         &.value-8 {
-            color:gray;
+            color: gray;
         }
     }
 
